BA-288 scrolloverflow issues addressed

--- a/web/wp-content/themes/borealis-2021/src/sass/style.scss
+++ b/web/wp-content/themes/borealis-2021/src/sass/style.scss
@@ -303,6 +303,10 @@
   }
 }
 
+.scrollbar-height::-webkit-scrollbar {
+  height: 10px;
+}
+
 @import "./wp-blocks/tables";
 @import "./wp-blocks/mathjax";
 @import "./wp-blocks/video";
